[gd_scene load_steps=18 format=3 uid="uid://ec7d64hoymce"]

[ext_resource type="Script" path="res://scripts/tack/sing_armor_creation.gd" id="1_28krs"]
[ext_resource type="Texture2D" uid="uid://8f0rfohmniwa" path="res://assets/menuUI.png" id="2_dh15j"]
[ext_resource type="Texture2D" uid="uid://diy8htskfybtd" path="res://assets/moon_bg.png" id="2_dsfvu"]
[ext_resource type="Texture2D" uid="uid://dm1bh2yywotao" path="res://assets/icon.png" id="3_lpcdy"]
[ext_resource type="Theme" uid="uid://clxftkhcliti8" path="res://assets/UI_theme.tres" id="4_mvm6d"]
[ext_resource type="Theme" uid="uid://dm4jlnbmnj4eb" path="res://assets/UI_theme_dark.tres" id="5_vd4rn"]
[ext_resource type="Theme" uid="uid://dix1yxdlw8hbv" path="res://assets/UI_theme_smol.tres" id="6_k01mv"]
[ext_resource type="Theme" uid="uid://vjxbkxdwdxu4" path="res://assets/UI_theme_alert.tres" id="7_a8x7b"]
[ext_resource type="Theme" uid="uid://cf6ttsgxwgavd" path="res://assets/UI_theme_blue.tres" id="8_idyj3"]
[ext_resource type="PackedScene" uid="uid://s4coqphlup24" path="res://scene/components/buttonSMOL2.tscn" id="9_jnbw7"]
[ext_resource type="Theme" uid="uid://cof5u4dam7c2t" path="res://assets/UI_theme_shadowed.tres" id="10_rft2d"]
[ext_resource type="PackedScene" uid="uid://b3cou3ndcs75h" path="res://scene/components/error_message.tscn" id="11_1tpt5"]
[ext_resource type="PackedScene" uid="uid://bpgiy2j33slge" path="res://scene/components/pop_up.tscn" id="12_3ufm8"]
[ext_resource type="PackedScene" uid="uid://wonyaiea8tn2" path="res://scene/components/buttonSMOL2_blue.tscn" id="12_joqum"]
[ext_resource type="PackedScene" uid="uid://cdigxro282sfm" path="res://scene/components/checkAlert.tscn" id="13_eawah"]
[ext_resource type="PackedScene" uid="uid://clixcby1mmxr3" path="res://scene/helpScreen.tscn" id="14_xi62b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kx556"]
atlas = ExtResource("2_dh15j")
region = Rect2(58, 10, 28, 28)

[node name="armorSetCreation" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_28krs")

[node name="background" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -640.0
offset_top = -360.0
offset_right = -600.0
offset_bottom = -320.0

[node name="TextureRect2" type="TextureRect" parent="background"]
z_index = -3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 32.6
anchor_bottom = 18.65
offset_left = -20.0
offset_top = -20.0
offset_right = 1260.0
offset_bottom = 700.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dsfvu")
stretch_mode = 1
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -167.5
offset_right = 304.0
offset_bottom = 167.5
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_kx556")
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
custom_minimum_size = Vector2(513, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 9.0
offset_right = 204.0
offset_bottom = 76.0
grow_horizontal = 2
theme_override_constants/separation = 2
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 130
alignment = 1

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_lpcdy")

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/TitleContainer"]
layout_mode = 2
theme = ExtResource("4_mvm6d")
theme_override_colors/font_color = Color(0.178263, 0.423711, 0.665043, 1)
text = "New Armor Item"

[node name="TextureRect2" type="TextureRect" parent="NinePatchRect/VBoxContainer/TitleContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
texture = ExtResource("3_lpcdy")
flip_h = true

[node name="HelperLabel3" type="Container" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 6)
layout_mode = 2
theme = ExtResource("5_vd4rn")

[node name="HBoxContainer3" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
alignment = 1

[node name="artist" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3/artist"]
layout_mode = 2
theme = ExtResource("6_k01mv")
text = "Texture Artist"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3/artist"]
layout_mode = 2
theme = ExtResource("7_a8x7b")
text = "*"
horizontal_alignment = 2

[node name="artistText" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer3/artist"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_neighbor_right = NodePath("../../inspiration/inspoText")
focus_neighbor_bottom = NodePath("../../../tackName/tackText")
focus_next = NodePath("../../inspiration/inspoText")
theme = ExtResource("7_a8x7b")
placeholder_text = "Who made the tack texture?"

[node name="inspiration" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(265, 0)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer3/inspiration"]
layout_mode = 2
theme = ExtResource("6_k01mv")
text = "Inspiration"
horizontal_alignment = 2

[node name="inspoText" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer3/inspiration"]
unique_name_in_owner = true
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
focus_neighbor_left = NodePath("../../artist/artistText")
focus_neighbor_bottom = NodePath("../../../tackName/tackText")
focus_next = NodePath("../../../tackName/tackText")
focus_previous = NodePath("../../artist/artistText")
theme = ExtResource("7_a8x7b")
placeholder_text = "IRL Tack || SSO || N/a"

[node name="tackName" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/tackName"]
layout_mode = 2
theme = ExtResource("6_k01mv")
text = "Armor Name"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/tackName"]
layout_mode = 2
theme = ExtResource("7_a8x7b")
text = "*"
horizontal_alignment = 2

[node name="tackText" type="LineEdit" parent="NinePatchRect/VBoxContainer/tackName"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer3/artist/artistText")
focus_previous = NodePath("../../HBoxContainer3/inspiration/inspoText")
placeholder_text = "Indigo"

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/tackName"]
custom_minimum_size = Vector2(49, 0)
layout_mode = 2

[node name="HelperLabel2" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme = ExtResource("8_idyj3")
text = "Below is how the item will appear in game as well as the texture/data name used in /give commands"
horizontal_alignment = 1
autowrap_mode = 2

[node name="previewBox" type="HSplitContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(513, 0)
layout_mode = 2

[node name="inGameBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/previewBox"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/inGameBoxContainer"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
theme = ExtResource("6_k01mv")
text = "In Game Item Name: "

[node name="inGameLabel" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/inGameBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(151, 0)
layout_mode = 2
theme = ExtResource("5_vd4rn")
text_overrun_behavior = 3

[node name="dataBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/previewBox"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/dataBoxContainer2"]
custom_minimum_size = Vector2(106, 0)
layout_mode = 2
text = "Texture/Data Name: "

[node name="dataLabel" type="Label" parent="NinePatchRect/VBoxContainer/previewBox/dataBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("5_vd4rn")
text_overrun_behavior = 3

[node name="Spacer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 3)
layout_mode = 2
alignment = 1

[node name="Line2D" type="Line2D" parent="NinePatchRect/VBoxContainer/Spacer"]
position = Vector2(-0.657455, 1)
scale = Vector2(3.0766, 1)
points = PackedVector2Array(176.296, 2, -1, 2)
width = 1.0
default_color = Color(0.811765, 0.67451, 0.490196, 1)

[node name="helperLabel7" type="Label" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
theme = ExtResource("8_idyj3")
text = "~~ Set Tack Information ~~"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(210, 100)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 9

[node name="armorType" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorType"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorType"]
layout_mode = 2
theme = ExtResource("6_k01mv")
text = "Armor Tier"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorType"]
layout_mode = 2
theme = ExtResource("7_a8x7b")
text = "*"
horizontal_alignment = 2

[node name="Container2" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorType"]
custom_minimum_size = Vector2(21, 0)
layout_mode = 2

[node name="armorOptions" type="OptionButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorType"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../../HBoxContainer2/custCheck/custCheckBox")
focus_neighbor_right = NodePath("../../moneyCheck/coinOptions")
focus_neighbor_bottom = NodePath("../../../HBoxContainer5/arpbBoxContainer2/arpbCheckBox")
focus_next = NodePath("../../moneyCheck/coinOptions")
focus_previous = NodePath("../../../HBoxContainer2/EDITBoxContainer/blueSpinBox")
theme = ExtResource("5_vd4rn")
item_count = 5
popup/item_0/text = "Cloth"
popup/item_1/text = "Iron"
popup/item_1/id = 1
popup/item_2/text = "Gold"
popup/item_2/id = 2
popup/item_3/text = "Diamond"
popup/item_3/id = 3
popup/item_4/text = "Amethyst"
popup/item_4/id = 4

[node name="moneyCheck" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Container2" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
layout_mode = 2
theme = ExtResource("6_k01mv")
text = "Purchasing Coin"
horizontal_alignment = 2

[node name="required" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
layout_mode = 2
theme = ExtResource("7_a8x7b")
text = "*"
horizontal_alignment = 2

[node name="coinOptions" type="OptionButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
unique_name_in_owner = true
layout_mode = 2
focus_next = NodePath("../../moneyBox/armorSpinBox")
theme = ExtResource("5_vd4rn")
item_count = 7
popup/item_0/text = "Copper"
popup/item_1/text = "Iron"
popup/item_1/id = 1
popup/item_2/text = "Emerald"
popup/item_2/id = 2
popup/item_3/text = "Gold"
popup/item_3/id = 3
popup/item_4/text = "Diamond"
popup/item_4/id = 4
popup/item_5/text = "Netherite"
popup/item_5/id = 5
popup/item_6/text = "Amethyst"
popup/item_6/id = 6

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck"]
custom_minimum_size = Vector2(13, 0)
layout_mode = 2

[node name="moneyBox" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Container2" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyBox"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyBox"]
layout_mode = 2
text = "Purchase Price:"

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyBox"]
custom_minimum_size = Vector2(6, 0)
layout_mode = 2

[node name="armorSpinBox" type="SpinBox" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyBox"]
unique_name_in_owner = true
layout_mode = 2
focus_previous = NodePath("../../moneyCheck/coinOptions")
theme = ExtResource("4_mvm6d")
min_value = 1.0
max_value = 64.0
value = 16.0
alignment = 1

[node name="Container" type="Container" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(45, 0)
layout_mode = 2

[node name="Line2D" type="Line2D" parent="NinePatchRect/VBoxContainer/HBoxContainer/Container"]
position = Vector2(45.3425, 2)
scale = Vector2(3.0766, 1)
points = PackedVector2Array(-7, 2, -7, 112)
width = 0.5
default_color = Color(0.811765, 0.67451, 0.490196, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 137)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Preload your textures into the pack!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="iconButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("9_jnbw7")]
unique_name_in_owner = true
layout_mode = 2

[node name="renderButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("9_jnbw7")]
unique_name_in_owner = true
layout_mode = 2

[node name="rackButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("9_jnbw7")]
unique_name_in_owner = true
layout_mode = 2

[node name="renderWingsButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2" instance=ExtResource("9_jnbw7")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="iconLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = " Icon Texture"
editable = false

[node name="renderLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
placeholder_text = " Armor Texture"
editable = false

[node name="rackLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
placeholder_text = " Rack Texture"
editable = false

[node name="renderWingsLineEdit" type="LineEdit" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
placeholder_text = " Wings Texture"
editable = false

[node name="Label2" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("5_vd4rn")
theme_override_constants/line_spacing = -5
text = "The selected textures will be copied to the pack. If left blank, you will need to add them manually."
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 467.0
offset_top = 313.0
offset_right = 560.0
offset_bottom = 327.0

[node name="required" type="Label" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme = ExtResource("7_a8x7b")
text = "*"
horizontal_alignment = 2

[node name="Label" type="Label" parent="NinePatchRect/HBoxContainer"]
layout_mode = 2
theme = ExtResource("10_rft2d")
text = "= required field"

[node name="confirmButton" parent="NinePatchRect" instance=ExtResource("12_joqum")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 537.0
offset_top = 306.0
offset_right = 601.0
offset_bottom = 328.0
button_text = "Generate"

[node name="backButton" parent="NinePatchRect" instance=ExtResource("9_jnbw7")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 7.0
offset_top = 306.0
offset_right = 71.0
offset_bottom = 328.0
button_text = "Main Menu"

[node name="errorMessage" parent="." instance=ExtResource("11_1tpt5")]
visible = false
layout_mode = 1

[node name="popUP_Saved" parent="." instance=ExtResource("12_3ufm8")]
visible = false
layout_mode = 1

[node name="popUP2_Dupe" parent="." instance=ExtResource("12_3ufm8")]
visible = false
layout_mode = 1

[node name="popUPexit" parent="." instance=ExtResource("12_3ufm8")]
visible = false
layout_mode = 1

[node name="checkPath" parent="." instance=ExtResource("13_eawah")]
visible = false
offset_left = 161.0
offset_top = -49.0
offset_right = 177.0
offset_bottom = -33.0
scale = Vector2(1.5, 1.5)

[node name="helpscreen" parent="." instance=ExtResource("14_xi62b")]
visible = false
layout_mode = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(400, 300)
theme = ExtResource("6_k01mv")
theme_override_colors/folder_icon_color = Color(0.758928, 0.918193, 0.727778, 1)
theme_override_colors/file_icon_color = Color(0.584314, 0.854902, 0.847059, 1)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.png;PNG Image")
use_native_dialog = true

[node name="popUPload" parent="." instance=ExtResource("12_3ufm8")]
visible = false
layout_mode = 1

[connection signal="text_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/artist/artistText" to="." method="_on_artist_text_text_changed"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/HBoxContainer3/inspiration/inspoText" to="." method="_on_inspo_text_text_changed"]
[connection signal="text_changed" from="NinePatchRect/VBoxContainer/tackName/tackText" to="." method="_on_tack_text_text_changed"]
[connection signal="item_selected" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/armorType/armorOptions" to="." method="_on_armor_options_item_selected"]
[connection signal="item_selected" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer/moneyCheck/coinOptions" to="." method="_on_coin_options_item_selected"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/iconButton" to="." method="_on_icon_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/renderButton" to="." method="_on_render_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/rackButton" to="." method="_on_rack_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/renderWingsButton" to="." method="_on_render_wings_button_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/confirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="button_pressed" from="NinePatchRect/backButton" to="." method="_on_back_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
